<resources>
    <string name="app_name">Viraj Grocery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bhavesh Kumar</string>
    <string name="nav_header_subtitle">bhavesh.android@gmail.com</string>
    <string name="nav_header_desc">User Details</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_order">My Order</string>
    <string name="menu_mycart">My Cart</string>
    <string name="menu_help">Help</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_phone">Not a valid phone number</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="password_match">Password is not same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_internet_connection_msg_header">Unable to connect to the internet</string>
    <string name="no_internet_connection_msg">It appears that you don’t have an active\ninternet connection.</string>
    <string name="api_error_header_msg">Communication Error</string>
    <string name="api_error_msg">Sorry, we are unable to load your information.</string>
    <string name="retry">Retry</string>
    <string name="message"><![CDATA[<html>
 <head></head>
 <body style="text-align:justify;color:gray;background-color:white;"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. when an unknown printer took a galley of type and
        scrambled it to make a type specimen book.</br> Hi vhgvhjb</p>
    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> when an unknown printer took a galley of type and
        scrambled it to make a type specimen book.</br> Hi vhgvhjb</p>
    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.<br> when an unknown printer took a galley of type and
        scrambled it to make a type specimen book.</br> Hi vhgvhjb</p></body></html>]]>
    </string>
    <string name="register">Register to Viraj Grocery</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="confPass">Confirm Password</string>
    <string name="phoneNo">Phone Number</string>
    <string name="signup">SIGN UP</string>
    <string name="reg_msg">Already have an account?</string>
    <string name="singIn">Sign In</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="title_msg">Please enter your registered mobile no. or Email ID</string>
    <string name="email_or_pphone">Email ID or Phone Number</string>
    <string name="submit">Submit</string>
    <string name="signin_msg">Welcome to Viraj Grocery</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_acc">Create new account?</string>
    <string name="chg_password">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="retype_pass">Re-type Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_txt">Please type the verification code sent to     </string>
    <string name="next">Next</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="request_opt">Request OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="termandcond"><![CDATA[
    <html>
     <head></head>
     <body style="text-align:justify;color:gray;background-color:white;">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pellentesque,
     urna nec hendrerit pellentesque, risus massa Lorem ipsum dolor sit amet, consectetur
     adipiscing elit. Nunc pellentesque, urna
     nec hendrerit pellentesque, risus massa</br>
     </br>
      Lorem ipsum dolor sit amet, consectetur
     adipiscing elit. Nunc pellentesque, urna
      nec hendrerit pellentesque, risus massa
     Lorem ipsum dolor sit amet, consectetur
      adipiscing elit. Nunc pellentesque, urna
      nec hendrerit pellentesque, risus massa</br>
      </br>
     Lorem ipsum dolor sit amet, consectetur
     adipiscing elit. Nunc pellentesque, urna
     nec hendrerit pellentesque, risus massa
     Lorem ipsum dolor sit amet, consectetur
     adipiscing elit. Nunc pellentesque, urna
     nec hendrerit pellentesque, risus massa</br>
     </br>
      Lorem ipsum dolor sit amet, consectetur
     adipiscing elit. Nunc pellentesque, urna
      nec hendrerit pellentesque, risus massa
     Lorem ipsum dolor sit amet, consectetur
      adipiscing elit. Nunc pellentesque, urna
      nec hendrerit pellentesque, risus massa</br>
      </br>
     Lorem ipsum dolor sit amet, consectetur
     adipiscing elit. Nunc pellentesque, urna
     nec hendrerit pellentesque, risus massa
     Lorem ipsum dolor sit amet, consectetur
     adipiscing elit. Nunc pellentesque, urna
     nec hendrerit pellentesque, risus massa</br>
     </br>
     </body>
     </html>]]>
    </string>
    <string name="akshay">Akshay Shayl</string>
    <string name="add_new_card">ADD NEW CARDS</string>
    <string name="card_num">Card Number</string>
    <string name="xxxx_xxxx_7987">XXXX_XXXX_7987</string>
    <string name="card_num2">Card Number</string>
    <string name="xxxx_xxxx_7986">XXXX_XXXX_7987</string>
    <string name="expiry">Expiry</string>
    <string name="expirydate1">3-12</string>
    <string name="expirydate2">4-12</string>
    <string name="offers">Offers</string>
    <string name="message2"><![CDATA[
<html>
 <head></head>
 <body style="text-align:justify;color:black;background-color:white;font-size:16px;">
 <b> Q. Payment Related Queries?</b>
   </br>
 </body>
</html>
]]>
</string>
    <string name="message3"><![CDATA[
<html>
 <head></head>
 <body style="text-align:justify;color:gray;background-color:white;font-size:16px;">
 <b>Lorem ipsum dolor sit amet, consectetur
     adipiscing elit. Nunc pellentesque, urna
     nec hendrerit pellentesque, risus massam
     Q. Payment Related Queries?</b>
   </br>
 </body>
</html>
]]>
</string>
    <string name="thanku_address">Address:</string>
    <string name="any_suggestion">Any Suggestion/Note to be considered ?</string>
    <string name="address_saket_nagr"> saket nagar</string>
    <string name="tell_your_friend_saving">Tell your friends about savings</string>
    <string name="you_saved">You have saved </string>
    <string name="order_placed_successfully">Order Successfully Placed</string>
    <string name="thank_u">Thank You</string>
    <string name="check_status">CHECK ORDER STATUS</string>
    <string name="enter_mobile">Mobile: 896868978</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="username">Name</string>
    <string name="flat_num">Flat/House/Office No.</string>
    <string name="street_name">Street/Society/Office Name</string>
    <string name="location">Location</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="nick_name">Nick Name Of Your Address</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="others">Others</string>
    <string name="loc_on_map">Locate On Map </string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_street_num">Enter No.</string>
    <string name="enter_street_society_name">Enter street/society/officename</string>
    <string name="enter_location">Enter location</string>
    <string name="mr">Mr.</string>
    <string name="mrs">Mrs.</string>
    <string name="miss">Miss.</string>
    <string name="enter_coupon">Enter coupon code here </string>
    <string name="apply_button">Apply</string>
    <string name="view_available_offer">View Available Offers</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="card">Card</string>
    <string name="cash_on_del">Cash On Delivery</string>
    <string name="mada">MADA</string>
    <string name="amount_payable">Amount Payable(Incl. of all taxes)</string>
    <string name="rupees">₹ 303</string>
    <string name="proceed_payment">PROCEED TO PAYMENT</string>
    <string name="card_number">CardNumber</string>
    <string name="enter_card_num">Enter Card name</string>
    <string name="mm_yy">MM/YY</string>
    <string name="enter_month_year">Enter month and year</string>
    <string name="cvv">CVV</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="save_this_card_for_future">Save this card for future use .Its perfectly secure.</string>
    <string name="save">SAVE</string>
    <string name="your_product_delivered_successfully">Your Product Delivered Successfully</string>
    <string name="rate_the_person_shopper">Rate the Person Shopper as per your experience</string>
    <string name="profile_holder_name">Name :</string>
    <string name="email_address">Email Address:</string>
    <string name="mailId">Shayalfrelance@gmail.com</string>
    <string name="mobile">Mobile:</string>
    <string name="mobilenum">8786568769</string>
    <string name="address">Address</string>
    <string name="user_address">C,block Noida Sector 61</string>
</resources>