<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
    tools:context=".feature.newcard.ui.NewCardActivity">

        <include android:id="@+id/blacktoolbar"
            layout="@layout/blacktoolbar"/>

        <TextView
            android:id="@+id/card_num_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_num"
            android:fontFamily="Roboto-Regular"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_20"/>

        <EditText
            android:id="@+id/card_number_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_card_num"
            android:fontFamily="Roboto-Regular"
            android:textColor="@color/shadowblack"
            android:textSize="@dimen/sp_16"
            android:background="@null"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"/>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/shadowblack"/>

        <TextView
            android:id="@+id/month_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mm_yy"
            android:fontFamily="Roboto-Regular"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_20"/>

        <EditText
            android:id="@+id/month_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_month_year"
            android:fontFamily="Roboto-Regular"
            android:textColor="@color/shadowblack"
            android:background="@null"
            android:textSize="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"/>
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/shadowblack"/>
        <TextView
            android:id="@+id/cvv_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cvv"
            android:fontFamily="Roboto-Regular"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_20"/>

        <EditText
            android:id="@+id/cvv_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_cvv"
            android:fontFamily="Roboto-Regular"
            android:textColor="@color/shadowblack"
            android:textSize="@dimen/sp_16"
            android:background="@null"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"/>
        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/shadowblack"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_20"
            android:theme="@style/MyCheckButton"
            android:text="@string/save_this_card_for_future" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightpurple"
                android:text="@string/save"
                android:layout_alignParentBottom="true"
                android:fontFamily="Roboto-Regular"
                android:textSize="@dimen/btn_txt"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </LinearLayout>

</layout>