<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.changepassword.ChangePasswordActivity">

    <include
        android:id="@+id/toolbar_changePassword"
        layout="@layout/toolbar_black" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_changePassword">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/old_pass_txtinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/old_password_edt_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_pass" />

        </android.support.design.widget.TextInputLayout>>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_pass_txtinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/old_pass_txtinput"
            android:layout_marginRight="30dp">

            <EditText
                android:id="@+id/new_password_edt_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pass" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/cnf_pass_txtinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/new_pass_txtinput"
            android:layout_marginRight="30dp">

            <EditText
                android:id="@+id/cnf_password_edt_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/retype_pass" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/change_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chg_password"
                style="@style/AppTheme.BottomButtonStyle"
                android:background="@color/button_color"/>




        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>